# MinimaxGL

./: .clang-format  .gitignore  CMakeLists.txt  LICENCE  README.md  _TicTacToe.vcxproj  _TicTacToe.vcxproj.filters  config.sh  format.sh  imgui.ini  run.sh
dependencies/glad/include/KHR/: khrplatform.h
dependencies/glad/include/glad/: glad.h
dependencies/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
dependencies/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h
dependencies/stb-master/: stb_c_lexer.h  stb_connected_components.h  stb_divide.h  stb_ds.h  stb_dxt.h  stb_easy_font.h  stb_herringbone_wang_tile.h  stb_hexwave.h  stb_image.h  stb_image_resize.h  stb_image_write.h  stb_include.h  stb_leakcheck.h  stb_perlin.h  stb_rect_pack.h  stb_sprintf.h  stb_textedit.h  stb_tilemap_editor.h  stb_truetype.h  stb_voxel_render.h
dependencies/stb-master/deprecated/: rrsprintf.h  stb.h  stretchy_buffer.h
dependencies/stb-master/tests/: resample_test.cpp  stb_c_lexer_fuzzer.cpp  test_cpp_compilation.cpp  test_ds_cpp.cpp
dependencies/stb-master/tests/caveview/: caveview.h  glext.h  stb_gl.h  stb_glprog.h
dependencies/stb-master/tests/oversample/: stb_wingraph.h
dependencies/stb-master/tests/prerelease/: stb_lib.h
include/: Application.h  Game.h  Gui.h  Shader.h  setup.h  texture.h  vertices.h
resources/shaders/: FragmentShader.txt  VertexShader.txt
src/: Application.cpp  Application.h  Game.cpp  Game.h  Gui.cpp  Gui.h  Shader.cpp  Shader.h  TicTacToe.rc  main.cpp  setup.cpp  setup.h  stb_impl.cpp  text.h  texture.cpp  tr.cpp  tr.h  vertices.cpp  vertices.h
